<resources>
    <string name="app_name">Enirve</string>
    <string name="title_home">Irregular verbs</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_title">Irregular verbs</string>
    <string name="time_description">With this option you choose how long is the exercise in minutes, for example if you
        want to practise for 5 minutes this is your choose
    </string>
    <string name="repetitions_description">With this option you choose how many times you want to practise each verb,
        for example if you want to do each verb 2 times this is your choose
    </string>
    <string name="hello_blank_fragment">Hello irregular verbs fragment</string>
    <string name="hello_profile_fragment">Profile page</string>
    <string name="iv_title">Duration type</string>
    <string name="iv_duration_type_time">Time</string>
    <string name="iv_duration_type_repetitions">Repetitions</string>
    <string name="textview">TextView</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="default_value_option">1</string>
    <string name="home_page_next">Next</string>
    <string name="mode_choose_verbs_title">Mode choose the verbs</string>
    <string name="mode_choose_verbs_manual">Manual</string>
    <string name="mode_choose_verbs_random">Random</string>
    <string name="mode_choose_verbs_by_level">By level</string>
    <string name="mode_choose_verbs_all">All</string>
    <string name="mode_choose_verbs_manual_description">Manually choose the verbs that you want to practice</string>
    <string name="mode_choose_verbs_random_description">The verbs are selected random, you just need to enter the number
        of verbs to practise
    </string>
    <string name="mode_choose_verbs_all_description">You will practise with all verbs of the app</string>
    <string name="mode_choose_verbs_by_level_description">You will can choose the verbs by level of difficulty</string>
    <string name="mode_choose_verbs_next">Start</string>
    <string name="choose_random">Choose Random</string>
    <string name="choose_all">Choose all</string>
    <string name="choose_the_verbs">Choose the verbs</string>
    <string name="title_activity_choose_manual_verbs">ChooseManualVerbsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_verbs_placeholder">Search</string>
    <string name="magnify">icon magnify</string>
    <string name="manual_verbs_cancel">Cancel</string>
    <string name="manual_verbs_save">Save</string>
    <string name="manual_choose_your_verbs">Verbs selected: %d</string>
    <string name="verb_default">ARISE</string>
    <string name="manula_verbs_deselect_all">Deselect All</string>
    <string name="manula_verbs_select_all">Select All</string>
    <string name="choose_manual">You\'ve no chosen any verb</string>
    <string name="practice_title_repetitions">Completed %d of %d</string>
    <string name="practice_success">Success: %d</string>
    <string name="practice_errors">Errors: %d</string>
    <string name="practice_verb">Verb: %s</string>
    <string name="practice_past_simple_hint">Enter the past simple</string>
    <string name="practice_past_participle_hint">Enter the past participle</string>
    <string name="practice_check">check</string>
    <string name="practice_next">next</string>
    <string name="practice_show_result">show the results</string>
    <string name="practice_error">error</string>
    <string name="practice_correct">icon correct</string>

    <string name="title_activity_result">ResultActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="result_title">Success percentage</string>
    <string name="result_success">Success: %d</string>
    <string name="result_errors">Errors: %d</string>
    <string name="result_finish">finish</string>
    <string name="result_repeat">repeat</string>

</resources>
