<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ResultActivity">

    <TextView
            android:id="@+id/text_view_result_title"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/result_title"
            android:fontFamily="@font/lato"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/darkColor"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_view_result_title"
            android:id="@+id/cl_result_progressbar"
    >

        <ProgressBar
                android:id="@+id/circularProgressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:max="100"
                android:progress="50"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/circular"
                android:secondaryProgress="100"
        />

        <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/darkColor"
                android:textSize="20sp"
                android:fontFamily="@font/lato"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cl_result_progressbar"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/practice_results"
    >

        <TextView
                android:id="@+id/text_view_result_success"
                android:text="@string/result_success"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textColor="@color/md_green_500"
                android:textSize="20sp"
        />

        <TextView
                android:id="@+id/text_view_result_errors"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="@string/result_errors"
                android:textColor="@color/md_red_500"
                android:textSize="20sp"
        />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  app:layout_constraintBottom_toBottomOf="parent">


        <Button android:id="@+id/button_result_repeat"
                android:text="@string/result_repeat"
                android:tag="repeat"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
        />

        <Button android:id="@+id/button_result_finish"
                android:text="@string/result_finish"
                android:tag="finish"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
        />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
