<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".IrregularVerbsFragment">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="32dp" android:paddingRight="32dp">

        <TextView
                android:text="@string/iv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/lato" android:textSize="20sp" android:textColor="@color/secondaryTextColor"/>

        <info.hoang8f.android.segmented.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmented_duration_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="4dp"
                segmentedgroup:sc_tint_color="@color/secondaryLightColor"
                segmentedgroup:sc_checked_text_color="@color/secondaryTextColor"
                android:layout_marginEnd="8dp"
                segmentedgroup:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                segmentedgroup:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                    android:id="@+id/segmented_duration_type_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iv_duration_type_time"
                    android:checked="true"
                    style="@style/RadioButton"/>

            <RadioButton
                    android:id="@+id/segmented_duration_type_repetitions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iv_duration_type_repetitions"
                    style="@style/RadioButton"/>
        </info.hoang8f.android.segmented.SegmentedGroup>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDurationTypeDescription" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/segmented_duration_type"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:paddingLeft="32dp" android:paddingRight="32dp" android:textAlignment="viewStart"
                android:fontFamily="@font/lato" android:textSize="18sp" android:textColor="@color/secondaryTextColor"
                app:lineHeight="25dp"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
